[gd_scene load_steps=17 format=2]

[ext_resource path="res://graphics/JellyfishSpritesheet2.png" type="Texture" id=1]
[ext_resource path="res://Jellyfish.gd" type="Script" id=2]
[ext_resource path="res://Bubbles.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "touched",
"speed": 10.0
} ]

[node name="Jellyfish" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
playing = true

[node name="Bubbles" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -14 )

[node name="Bubbles2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -14 )

[node name="Bubbles3" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -14 )

[node name="Bubbles4" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -14 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -21.0
margin_top = -23.0
margin_right = 19.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="Bubbles"]
[editable path="Bubbles2"]
[editable path="Bubbles3"]
[editable path="Bubbles4"]
